--- a/app/src/main/res/layout/projectlist.xml
+++ b/app/src/main/res/layout/projectlist.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
 
-    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
